<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/content_zhu"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="lee.com.tianqidemo.zhu"
    tools:showIn="@layout/activity_zhu"
    android:background="@drawable/day_clearsky"
    android:fitsSystemWindows="true"
    android:clipToPadding="true"
    >
<!--
    当天天气信息
    -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="30dip"
        android:text="@string/temp"
        android:textSize="40dip"
        android:layout_alignParentStart="true"
        android:id="@+id/wendu"/>
    <TextView
        android:text="@string/tianqi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/didian"
        android:layout_below="@+id/wendu"
        android:layout_alignEnd="@+id/wendu"/>
<!--
    天气预报信息
    -->
    <TextView
        android:text="@string/forecast_today"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="90dip"
        android:id="@+id/fc1"
        android:layout_marginTop="85dp"
        android:layout_below="@+id/aqi"
        android:layout_alignParentEnd="true"/>
    <TextView
        android:text="@string/forecast_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fc2"
        android:layout_below="@+id/fc1"
        android:layout_marginTop="30dip"
        android:layout_alignStart="@+id/fc1"
        />
    <TextView
        android:text="@string/forecast_next_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fc3"
        android:layout_below="@+id/fc2"
        android:layout_marginTop="30dip"
        android:layout_alignStart="@+id/fc2"
        />
 <!--
    其他天气信息
    -->
    <TextView
        android:text="@string/wind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dip"
        android:id="@+id/wind"
        android:layout_marginLeft="30dip"
        android:layout_marginTop="220dip"
        android:gravity="center_horizontal"/>

    <TextView
        android:text="@string/shidu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/shidu"
        android:layout_marginTop="220dip"
        android:layout_marginLeft="160dip"
        android:gravity="center_horizontal"/>

    <TextView
        android:text="@string/aqi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="240dip"
        android:id="@+id/aqi"
        android:layout_marginTop="220dp"
        android:gravity="center_horizontal"
/>
  <!--  android:layout_alignBaseline="@+id/shidu"
    android:layout_alignBottom="@+id/shidu"
    android:layout_alignParentEnd="true"-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/content_wind"
        android:layout_marginTop="242dip"
        android:layout_marginLeft="30dip"
        android:gravity="center_horizontal"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/content_hum"
        android:layout_marginTop="242dip"
        android:layout_marginLeft="160dip"
        android:gravity="center_horizontal"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/content_api"
        android:layout_marginTop="242dip"
        android:layout_marginLeft="240dip"
        android:gravity="center_horizontal"
        />

    <ImageView
        android:layout_width="100px"
        android:layout_height="100px"
        android:id="@+id/iv1"
        android:layout_alignTop="@+id/fc1"
        android:layout_alignStart="@+id/content_wind"/>
    <ImageView
        android:layout_width="100px"
        android:layout_height="100px"
        android:id="@+id/iv2"
        android:layout_below="@+id/iv1"
        android:layout_alignStart="@+id/iv1"
        android:layout_marginTop="30dip"/>
    <ImageView
        android:layout_width="100px"
        android:layout_height="100px"
        android:id="@+id/iv3"
        android:layout_below="@+id/iv2"
        android:layout_alignStart="@+id/iv2"
        android:layout_marginTop="30dip"
        />




</RelativeLayout>
